--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^7.0.0",
     "@astrojs/preact": "^3.0.1",
     "@astrojs/rss": "^4.0.1",
+    "@astrojs/sitemap": "^3.0.3",
     "@astrojs/svelte": "^5.0.0",
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.3",
